# regexer

./: Cargo.toml  LICENSE  README.md
code/: Cargo.toml
code/nix/modules/: formatting.nix  rust.nix
code/notes/: note.md  slides.md
code/src/: custom_regex.rs  engines.rs  main.rs
nix/modules/: devshell.nix
notes/: note.md  slides.md
src/: app.rs  custom_regex.rs  engines.rs  main.rs  tests.rs
