[package]
authors = ["Isaac Muzzey <isaac.muzzey@mines.sdsmt.edu>"]
edition = "2021"
name = "regexer"
description = "A simple Rust regex parser"
version = "0.1.0"
rust-version = "1.83"


[dependencies]
clap = "4.5.23"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dfa = "0.2.0"
ratatui = "0.29.0"
regex = "1.11.1"
regex-automata = "0.4.9"
tui-textarea = "0.7.0"
